--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  box-sizing: border-box;
   height: 100%;
   width: 100%;
 }
