--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 #app {
@@ -15,10 +16,16 @@ body {
   text-align: center;
   height: 100%;
   width: 100%;
+  box-sizing: border-box;
 }
 
 ul {
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+:before,
+:after {
+  box-sizing: border-box;
 }
