define color in src/index.scss

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @import-normalize;
 
+$color-input-focus: #615a4c80;
+$color-input-box-shadow: rgba(0, 0, 0, 0.1);
+$color-input-border: #aaaaaa;
+
 html,
 body {
   height: 100%;
