color variableミスの修正

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -12,7 +12,7 @@ $bg-primary: #FFF0F0;
 $bg-secondary: #ffffff;
 $bg-tertiary: #CB8B8B;
 
-$bg-secondary-highlight: #cf6767;
+$bg-secondary-highlight: #EEE8E8;
 $bg-tertiary-highlight: #EAAEAE;
 
 $accent-primary-highlight: #862626;
