--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -1,3 +1,14 @@
+@mixin font-head {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+@mixin size-title {
+  font-size: 20px;
+  line-height: 30px;
+}
+
 @mixin size-body {
   font-size: 16px;
   line-height: 24px;
@@ -6,4 +17,9 @@
 @mixin size-body-small {
   font-size: 14px;
   line-height: 21px;
+}
+
+@mixin size-body-small-2 {
+  font-size: 12px;
+  line-height: 18px;
 }
