add font bold in style/mixins.css

--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -1,9 +1,10 @@
-@mixin font-head {
+@mixin font-bold {
   font-weight: 700;
+}
+@mixin size-head {
   font-size: 24px;
   line-height: 36px;
 }
-
 @mixin size-title {
   font-size: 20px;
   line-height: 30px;
