--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -12,6 +12,7 @@ $bg-primary: #FFF0F0;
 $bg-secondary: #ffffff;
 $bg-tertiary: #CB8B8B;
 
+$bg-primary-highlight: #ccbab4;
 $bg-secondary-highlight: #EEE8E8;
 $bg-tertiary-highlight: #EAAEAE;
 
