--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,20 +1,21 @@
-$accent-primary: #AC4848;
-$accent-error: #F26451;
-$accent-success: #58AD30;
+$accent-primary: #ac4848;
+$accent-error: #f26451;
+$accent-success: #58ad30;
 
-$border: #E6D6D6;
+$border: #e6d6d6;
 
 $ui-primary: #665558;
-$ui-secondary: #BFAAB2;
-$ui-white: #FFFFFF;
+$ui-secondary: #bfaab2;
+$ui-white: #ffffff;
 
-$bg-primary: #FFF0F0;
+$bg-primary: #fff0f0;
 $bg-secondary: #ffffff;
-$bg-tertiary: #CB8B8B;
+$bg-tertiary: #cb8b8b;
+$bg-territory: #be6969;
 
 $bg-primary-highlight: #ccbab4;
-$bg-secondary-highlight: #EEE8E8;
-$bg-tertiary-highlight: #EAAEAE;
+$bg-secondary-highlight: #eee8e8;
+$bg-tertiary-highlight: #eaaeae;
 
 $accent-primary-highlight: #862626;
-$accent-error-highlight: #D6240C;
+$accent-error-highlight: #d6240c;
