add size-body-small-3in mixins.scss

--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -28,6 +28,11 @@
   line-height: 16px;
 }
 
+@mixin size-body-small-3 {
+  font-size: 14px;
+  line-height: 21px;
+}
+
 @mixin weight-bold {
   font-weight: 700;
 }
