--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -2,6 +2,10 @@
   font-size: 24px;
   line-height: 28px;
 }
+@mixin size-head-2 {
+  font-size: 24px;
+  line-height: 36px;
+}
 
 @mixin size-head-small {
   font-size: 18px;
