territoryの廃止, contrast比保つように変更

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,17 +1,16 @@
-$accent-primary: #ac4848;
+$accent-primary: #B12929;
 $accent-error: #f26451;
 $accent-success: #58ad30;
 
 $border: #e6d6d6;
 
-$ui-primary: #665558;
-$ui-secondary: #bfaab2;
+$ui-primary: #4A3C3E;
+$ui-secondary: #715C64;
 $ui-white: #ffffff;
 
-$bg-primary: #fff0f0;
+$bg-primary: #FFF3F3;
 $bg-secondary: #ffffff;
-$bg-tertiary: #cb8b8b;
-$bg-territory: #be6969;
+$bg-tertiary: #b75858;
 
 $bg-primary-highlight: #ccbab4;
 $bg-secondary-highlight: #eee8e8;
