menu用のshadowを定義

--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -62,3 +62,7 @@
     background-color: mix(#000000, $background, 20%);
   }
 }
+
+@mixin shadow-menu {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+}
